# plantcalc

./: .gitignore  Makefile.am  configure.ac  test.cxx
doc/: Doxyfile.in
src/: connection.cxx  connection.hxx  device.cxx  device.hxx  equation.cxx  equation.hxx  equationsolver.cxx  equationsolver.hxx  equationsystem.cxx  equationsystem.hxx  exception.cxx  exception.hxx  id.cxx  id.hxx  medium.cxx  medium.hxx  pin.cxx  pin.hxx  stream.cxx  stream.hxx  substance.cxx  substance.hxx  system.cxx  system.hxx  variable.cxx  variable.hxx
src/connections/: fuelconnection.cxx  fuelconnection.hxx  mechanicalenergyconnection.cxx  mechanicalenergyconnection.hxx  mediumconnection.cxx  mediumconnection.hxx
src/connections/medium/: waterconnection.cxx  waterconnection.hxx
src/devices/: boiler.cxx  boiler.hxx  condenser.cxx  condenser.hxx  condenser2.cxx  condenser2.hxx  deaerator.cxx  deaerator.hxx  deaerator2.cxx  deaerator2.hxx  feedwaterheater.cxx  feedwaterheater.hxx  feedwaterheater2.cxx  feedwaterheater2.hxx  mediumflowdevice.cxx  mediumflowdevice.hxx  pump.cxx  pump.hxx  turbine.cxx  turbine.hxx
src/devices/common/: condensingheatexchanger.cxx  condensingheatexchanger.hxx  condensingheatexchanger2.cxx  condensingheatexchanger2.hxx  endpoint.hxx  endpoint.ixx  mediumflowdevice.cxx  mediumflowdevice.hxx  mixingjunction.hxx  mixingjunction.ixx  reversibleturbine.cxx  reversibleturbine.hxx  splittingjunction.hxx  splittingjunction.ixx
src/devices/endpoints/: fuelendpoint.cxx  fuelendpoint.hxx  mechanicalenergyendpoint.cxx  mechanicalenergyendpoint.hxx  mediumendpoint.cxx  mediumendpoint.hxx
src/devices/mixingjunctions/: approximatemediummixingjunction.cxx  approximatemediummixingjunction.hxx  mechanicalenergymixingjunction.cxx  mechanicalenergymixingjunction.hxx
src/devices/splittingjunctions/: fuelsplittingjunction.cxx  fuelsplittingjunction.hxx  mediumsplittingjunction.cxx  mediumsplittingjunction.hxx
src/equations/: additiveinverseequation.cxx  additiveinverseequation.hxx  equalityequation.cxx  equalityequation.hxx  linearequation.cxx  linearequation.hxx  mediumstateequation.cxx  mediumstateequation.hxx  waterstateequation.cxx  waterstateequation.hxx
src/equationsolvers/: autoequationsolver.cxx  autoequationsolver.hxx  determinateequationsolver.cxx  determinateequationsolver.hxx  linearequationsolver.cxx  linearequationsolver.hxx  singleequationsolver.cxx  singleequationsolver.hxx
src/exceptions/: contradictionerror.cxx  contradictionerror.hxx  indeterminateequationerror.cxx  indeterminateequationerror.hxx  nonhomogeneoussubstanceerror.cxx  nonhomogeneoussubstanceerror.hxx
src/ids/: deviceid.cxx  deviceid.hxx  devicevariableid.cxx  devicevariableid.hxx  pinid.cxx  pinid.hxx  pinvariableid.cxx  pinvariableid.hxx  variableid.cxx  variableid.hxx
src/media/: h2omedium.cxx  h2omedium.hxx
src/pins/: fuelpin.cxx  fuelpin.hxx  mechanicalenergypin.cxx  mechanicalenergypin.hxx  mediumpin.cxx  mediumpin.hxx
src/streams/: mediumstream.cxx  mediumstream.hxx
src/streams/medium/: waterstream.cxx  waterstream.hxx
src/substances/: mediumsubstance.cxx  mediumsubstance.hxx
src/substances/media/: h2omedium.cxx  h2omedium.hxx
src/util/: methodbasediterable.hxx  methodbasediterable.ixx  methodbasediterator.hxx  methodbasediterator.ixx  posorunsetdouble.cxx  posorunsetdouble.hxx  sequentialnumbersource.cxx  sequentialnumbersource.hxx
src/variables/: constant.cxx  constant.hxx  devicevariable.cxx  devicevariable.hxx  ownedvariable.cxx  ownedvariable.hxx  pinvariable.cxx  pinvariable.hxx
